Edit Post: Fix sidebar scroll overflow.

--- a/packages/components/src/panel/style.scss
+++ b/packages/components/src/panel/style.scss
@@ -42,6 +42,7 @@
 	height: 50px;
 	border-top: $border-width solid $light-gray-500;
 	border-bottom: $border-width solid $light-gray-500;
+	z-index: z-index(".components-panel__header");
 
 	h2 {
 		margin: 0;
