--- a/packages/edit-post/src/components/editor-regions/style.scss
+++ b/packages/edit-post/src/components/editor-regions/style.scss
@@ -83,6 +83,7 @@ html {
 	bottom: 0;
 	left: 0;
 	background: $white;
+	overflow: auto;
 
 	&:empty {
 		display: none;
