--- a/packages/edit-post/src/components/sidebar/sidebar-header/style.scss
+++ b/packages/edit-post/src/components/sidebar/sidebar-header/style.scss
@@ -33,3 +33,11 @@
 		}
 	}
 }
+
+.edit-post-sidebar-header__container {
+	display: flex;
+	flex-direction: column;
+	position: sticky;
+	top: 0;
+	z-index: z-index(".components-panel__header");
+}
